--- a/assets/css/form.css
+++ b/assets/css/form.css
@@ -44,7 +44,7 @@ label, legend {
 	width: 100%;
 }
 
-input, select {
+input, select, textarea {
 	border: 0.5px solid;
 	border-radius: 3px;
 	display: block;
