--- a/app/vues/templates/admin/vAdminUtilisateurModifier.twig
+++ b/app/vues/templates/admin/vAdminUtilisateurModifier.twig
@@ -1,5 +1,5 @@
 <section>
-	<h1>{{ titre|upper }}</h1>
+	<h2>{{ titre }}</h2>
 
 	<form method="POST" action="admin?entite=utilisateur&action=m&utilisateur_id={{  utilisateur.utilisateur_id }}">
 
