--- a/app/vues/templates/admin/vAdminPaysModifier.twig
+++ b/app/vues/templates/admin/vAdminPaysModifier.twig
@@ -1,13 +1,13 @@
 <section>
-	<h1>{{ titre|upper }}</h1>
+	<h2>{{ titre }}</h2>
 
-	<form method="POST" action="membre?entite=pays&action=m&pays_id={{  pays.pays_id }}">
+	<form method="POST" action="admin?entite=pays&action=m&pays_id={{  pays.pays_id }}">
 
 		<label>Nom</label>
 		<input name="pays_nom" value="{{ pays.pays_nom }}">
 		<span>&nbsp;{{ erreurs.pays_nom }}</span>
 
-		<input type="hidden" name="pays_id" value="{{ pays.pays_id }}">
+		<input type="hidden" name="pays_id" value="{{ genre.pays_id }}">
 
 		<input type="submit" value="Envoyer">
 
