--- a/app/vues/templates/courriels/cMdp.twig
+++ b/app/vues/templates/courriels/cMdp.twig
@@ -3,12 +3,12 @@
 		{{ oUtilisateur.utilisateur_prenom }}
 		{{ oUtilisateur.utilisateur_nom }},</p>
 
-	{% if oUtilisateur.utilisateur_profil in [constant('utilisateur::PROFIL_ADMINISTRATEUR')] %}
+	{% if oUtilisateur.utilisateur_profil in [constant('utilisateur::PROFIL_ADMINISTRATEUR')]  %}
 		<p style="line-height: 1.5; opacity: 0.9;">Nous avons le plaisir de vous transmettre votre identifiant de connexion et votre mot de passe pour accéder à l'administration de notre site Stampee.</p>
 	{% endif %}
 
 	{% if oUtilisateur.utilisateur_profil == constant('utilisateur::PROFIL_MEMBRE')  %}
-		<p style="line-height: 1.5; opacity: 0.9;">Nous avons le plaisir de vous transmettre votre identifiant de connexion et votre mot de passe à votre espace membre Stampee.</p>
+		<p style="line-height: 1.5; opacity: 0.9;">Nous avons le plaisir de vous transmettre votre identifiant de connexion et votre mot de passe sur notre site Stampee.</p>
 	{% endif %}
 
 	<p style="line-height: 1.5; opacity: 0.9;">Identifiant:
@@ -18,17 +18,10 @@
 		<strong style="color: #f9bc64;">{{ oUtilisateur.utilisateur_mdp }}</strong>
 	</p>
 
-	{% if oUtilisateur.utilisateur_profil in [constant('utilisateur::PROFIL_ADMINISTRATEUR')]  %}
-		<p style="line-height: 1.5; opacity: 0.9;">
-			<a style="  text-decoration: none; color: #98cece;" href="http://{{ http_host }}{{ constant('Routeur::BASE_URI') }}admin">Cliquez sur ce lien pour accéder à notre interface d'administration</a>
-		</p>
-	{% else %}
-		<p style="line-height: 1.5; opacity: 0.9;">
-			<a style="  text-decoration: none; color: #98cece;" href="http://{{ http_host }}{{ constant('Routeur::BASE_URI') }}">Cliquez sur ce lien pour vous connecter à notre site</a>
-		</p>
-	{% endif %}
+	<p style="line-height: 1.5; opacity: 0.9;">
+		<a style="  text-decoration: none; color: #98cece;" href="http://{{ http_host }}{{ constant('Routeur::BASE_URI') }}">Cliquez sur ce lien pour vous connecter à notre site</a>
+	</p>
 
 	<p style="line-height: 1.5; opacity: 0.9;">Cordialement,</p>
-	<p style="line-height: 1.5; opacity: 0.9;">L'équipe de Stampee</p>
-	<div style="line-height: 54px; font-size: 28px; font-family: cursive; color: #f9bc64;">Stampee Auctions</div>
+	<div style="line-height: 54px; font-size: 28px; font-family: cursive; color: #f9bc64;">L'équipe Stampee'</div>
 </section>
