--- a/app/vues/templates/gabarits/gabarit-admin.twig
+++ b/app/vues/templates/gabarits/gabarit-admin.twig
@@ -17,12 +17,13 @@
 		<link rel="stylesheet" href="assets/css/utilities.css">
 		<link rel="stylesheet" href="assets/css/components/herobanner.css">
 		<link rel="stylesheet" href="assets/css/admin.css">
+		<link rel="stylesheet" href="assets/css/modale.css">
 		<link rel="stylesheet" href="assets/css/media-query.css" media="screen and (max-width: 900px)">
 		<title>Stampee |
 			{{ titre }}</title>
 		<script src="assets/js/main.js" defer></script>
-		<script type="module" src="assets/js/connexionCompte.js"></script>
-		<script type="module" src="js/admin.js"></script>
+		<script type="module" src="assets/js/connexionDeconnexion.js"></script>
+		<script type="module" src="assets/js/admin.js"></script>
 	</head>
 
 	<body>
@@ -88,7 +89,8 @@
 			<div class="herobanner">
 				<img src="assets/img/herobannerMembre.webp" alt="">
 				<div class="herobanner-text max-width60">
-					<h1>Espace membre</h1>
+					<h1>Espace
+						{{ oUtilConn.utilisateur_profil == constant('Utilisateur::PROFIL_ADMINISTRATEUR') ? 'Administrateur' : 'Membre' }}</h1>
 				</div>
 			</div>
 		</header>
@@ -101,22 +103,21 @@
 				</p>
 				<ul>
 					<li>
-						<hr>
-						<a href="admin">Mes timbres</a>
+						<a href="admin?entite=enchere">{{ oUtilConn.utilisateur_profil == constant('Utilisateur::PROFIL_ADMINISTRATEUR') ? 'Enchères' : 'Mes enchères' }}</a>
 					</li>
 					<li>
-						<a href="admin?entite=enchere">Mes enchères</a>
+						<a href="admin?entite=mise">{{ oUtilConn.utilisateur_profil == constant('Utilisateur::PROFIL_ADMINISTRATEUR') ? 'Mises' : 'Mes mises' }}</a>
 					</li>
 					<li>
-						<a href="admin?entite=mise">Mes mises</a>
-					</li>
-					<li>
-						<a href="admin?entite=like">Mes favoris</a>
+						<a href="admin?entite=like">{{ oUtilConn.utilisateur_profil == constant('Utilisateur::PROFIL_ADMINISTRATEUR') ? 'Favoris' : 'Mes favoris' }}</a>
 					</li>
 					{% if oUtilConn.utilisateur_profil == constant('Utilisateur::PROFIL_ADMINISTRATEUR') %}
 						<li>
 							<hr>
 							<a href="admin?entite=utilisateur">Utilisateurs</a>
+						</li>
+						<li>
+							<a href="admin?entite=pays">Pays</a>
 						</li>
 					{% endif %}
 				</ul>
@@ -135,9 +136,9 @@
 				<div class="footer-main-content">
 					<h3>À propos</h3>
 					<p class="no-padding-bottom">Lord Stampee vient d’une famille de passionnés de philatélie depuis des
-																																																																																																																																																																																																																																										                    générations. Sa passion pour
-																																																																																																																																																																																																																																										                    les timbres rares et précieux l'a amené à rassembler l'une des collections les plus impressionnantes
-																																																																																																																																																																																																																																										                    du monde.</p>
+																																																																																																																																																																																																																																																																																																																														                    générations. Sa passion pour
+																																																																																																																																																																																																																																																																																																																														                    les timbres rares et précieux l'a amené à rassembler l'une des collections les plus impressionnantes
+																																																																																																																																																																																																																																																																																																																														                    du monde.</p>
 					<a href="#">En savoir plus</a>
 				</div>
 				<div class="footer-main-content">
