--- a/app/vues/templates/gabarits/gabarit-frontend.twig
+++ b/app/vues/templates/gabarits/gabarit-frontend.twig
@@ -20,11 +20,12 @@
 		<link rel="stylesheet" href="assets/css/icons.css">
 		<link rel="stylesheet" href="assets/css/utilities.css">
 		<link rel="stylesheet" href="assets/css/admin.css">
+		<link rel="stylesheet" href="assets/css/modale.css">
 		<link rel="stylesheet" href="assets/css/media-query.css" media="screen and (max-width: 900px)">
 		<title>Stampee |
 			{{ titre }}</title>
 		<script src="assets/js/main.js" defer></script>
-		<script type="module" src="assets/js/connexionCompte.js"></script>
+		<script type="module" src="assets/js/connexionDeconnexion.js"></script>
 		<script type="module" src="assets/js/creerCompte.js"></script>
 	</head>
 
@@ -126,9 +127,9 @@
 				<div class="footer-main-content">
 					<h3>À propos</h3>
 					<p class="no-padding-bottom">Lord Stampee vient d’une famille de passionnés de philatélie depuis des
-																																																																																																																								                    générations. Sa passion pour
-																																																																																																																								                    les timbres rares et précieux l'a amené à rassembler l'une des collections les plus impressionnantes
-																																																																																																																								                    du monde.</p>
+																																																																																																																																										                    générations. Sa passion pour
+																																																																																																																																										                    les timbres rares et précieux l'a amené à rassembler l'une des collections les plus impressionnantes
+																																																																																																																																										                    du monde.</p>
 					<a href="#">En savoir plus</a>
 				</div>
 				<div class="footer-main-content">
