--- a/app/vues/templates/admin/vAdminEncheres.twig
+++ b/app/vues/templates/admin/vAdminEncheres.twig
@@ -7,7 +7,7 @@
 		{# AJOUTER UN TIMBRE #}
 		<a href="admin?entite=enchere&action=a" class="button">Ajouter une enchère</a>
 	</div>
-	<p class="messageRetourAction {{ classRetour }}">{{ messageRetourAction }}&nbsp;</p>
+	<p class="no-padding-bottom messageRetourAction {{ classRetour }}">{{ messageRetourAction }}&nbsp;</p>
 	{# TABLEAU TIMBRE #}
 	<table>
 		<thead>
@@ -51,10 +51,10 @@
 					<th>{{ enchereTimbre.enchere_date_debut }}</th>
 					<th>{{ enchereTimbre.enchere_date_fin }}</th>
 					<th>
-						<a href="admin?entite=timbre&action=m&timbre_id={{ enchereTimbre.timbre_id }}">
+						<a href="admin?entite=enchere&action=m&timbre_id={{ enchereTimbre.timbre_id }}">
 							modifier</a>
 						{# si pas d'enchere ni de mise sur le timbre on peut supprimer #}
-						<span class="confirmer" data-href="admin?entite=enchere&action=s&enchere_id={{ enchereTimbre.timbre_id }}">supprimer</span>
+						<span class="confirmer" data-href="admin?entite=enchere&action=s&timbre_id={{ enchereTimbre.timbre_id }}">supprimer</span>
 					</th>
 				</tr>
 			{% endfor %}
