--- a/app/vues/templates/admin/vAdminUtilisateurs.twig
+++ b/app/vues/templates/admin/vAdminUtilisateurs.twig
@@ -4,36 +4,63 @@
 <section>
 	<div class="catalogue-header">
 		<h2>{{ titre }}</h2>
-		<a href="admin?entite=utilisateur&action=a" class="button">Ajouter un utilisateur</a>
+		{% if oUtilConn.utilisateur_profil == constant('Utilisateur::PROFIL_ADMINISTRATEUR') %}
+			<a href="admin?entite=utilisateur&action=a" class="button">Ajouter un utilisateur</a>
+		{% endif %}
+
 	</div>
 	<p class="messageRetourAction {{ classRetour }}">{{ messageRetourAction|raw }}&nbsp;</p>
-	<table>
-		<thead>
-			<tr>
-				<th>Id</th>
-				<th>Nom, Prénom</th>
-				<th>Courriel</th>
-				<th>Profil</th>
-				<th>Actions</th>
-			</tr>
-		</thead>
-		<tbody>
-			{% for utilisateur in utilisateurs %}
+	{% if oUtilConn.utilisateur_profil == constant('Utilisateur::PROFIL_ADMINISTRATEUR') %}
+		<table>
+			<thead>
 				<tr>
-					<th>{{ utilisateur.utilisateur_id }}</th>
-					<th>{{ utilisateur.utilisateur_nom }},
-						{{ utilisateur.utilisateur_prenom }}</th>
-					<th>{{ utilisateur.utilisateur_courriel }}</th>
-					<th>{{ utilisateur.utilisateur_profil }}</th>
+					<th>Id</th>
+					<th>Prénom, Nom</th>
+					<th>Courriel</th>
+					<th>Profil</th>
+					<th>Actions</th>
+				</tr>
+			</thead>
+			<tbody>
+				{% for utilisateur in utilisateurs %}
+					<tr>
+						<th>{{ utilisateur.utilisateur_id }}</th>
+						<th>{{ utilisateur.utilisateur_prenom }},
+							{{ utilisateur.utilisateur_nom }}</th>
+						<th>{{ utilisateur.utilisateur_courriel }}</th>
+						<th>{{ utilisateur.utilisateur_profil }}</th>
+						<th>
+							<a href="admin?entite=utilisateur&action=m&utilisateur_id={{ utilisateur.utilisateur_id }}">modifier</a>
+							{# si pas d'enchere ni de mise sur le timbre on peut supprimer #}
+							<span class="confirmer" data-href="admin?entite=utilisateur&action=s&utilisateur_id={{ utilisateur.utilisateur_id }}">supprimer</span>
+							<a href="admin?entite=utilisateur&action=generer_mdp&utilisateur_id={{ utilisateur.utilisateur_id }}">générer mdp</a>
+						</th>
+					</tr>
+				{% endfor %}
+			</tbody>
+		</table>
+	{% else %}
+		<table>
+			<thead>
+				<tr>
+					<th>Prénom, Nom</th>
+					<th>Courriel</th>
+					<th>Actions</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<th>{{ utilisateurs.utilisateur_prenom }},
+						{{ utilisateurs.utilisateur_nom }}</th>
+					<th>{{ utilisateurs.utilisateur_courriel }}</th>
 					<th>
-						<a href="admin?entite=utilisateur&action=m&utilisateur_id={{ utilisateur.utilisateur_id }}">modifier</a>
-
-						{# si pas d'enchere ni de mise sur le timbre on peut supprimer #}
-						<span class="confirmer" data-href="admin?entite=utilisateur&action=s&utilisateur_id={{ utilisateur.utilisateur_id }}">supprimer</span>
-						<a href="admin?entite=utilisateur&action=generer_mdp&utilisateur_id={{ utilisateur.utilisateur_id }}">générer mdp</a>
+						<a href="admin?entite=utilisateur&action=m&utilisateur_id={{ utilisateurs.utilisateur_id }}">modifier</a>
 					</th>
 				</tr>
-			{% endfor %}
-		</tbody>
-	</table>
+			</tbody>
+		</table>
+
+	{% endif %}
+
+
 	{{ include("admin/modaleSuppression.twig") }}
