--- a/app/vues/templates/gabarits/gabarit-admin.twig
+++ b/app/vues/templates/gabarits/gabarit-admin.twig
@@ -60,7 +60,7 @@
 					<div class="nav-main h2 uppercase" role="menubar">
 						<a href="." role="menuitem" aria-haspopup="false">Accueil</a>
 						<div class="nav-main-dropdown">
-							<a href="#" role="menuitem" aria-haspopup="true">Enchères</a>
+							<a href="catalogue" role="menuitem" aria-haspopup="true">Enchères</a>
 							<div class="nav-main-dropdown-content" role="menu">
 								<a href="catalogue" role="menuitem" aria-haspopup="false">Enchères en cours</a>
 								<a href="#" role="menuitem" aria-haspopup="false">Enchères archivées</a>
@@ -95,13 +95,12 @@
 			</div>
 		</header>
 		<div class="admin">
-			<aside>
-				<p>
+			<aside>Bienvenue,
+				<h3>
 					{{ oUtilConn.utilisateur_prenom }}
 					{{ oUtilConn.utilisateur_nom }}
-					<a href="admin?entite=utilisateur&action=d">Déconnecter</a>
-				</p>
-				<ul>
+				</h3>
+				<ul class="h4">
 					<li>
 						<a href="admin?entite=enchere">{{ oUtilConn.utilisateur_profil == constant('Utilisateur::PROFIL_ADMINISTRATEUR') ? 'Enchères' : 'Mes enchères' }}</a>
 					</li>
@@ -111,15 +110,18 @@
 					<li>
 						<a href="admin?entite=like">{{ oUtilConn.utilisateur_profil == constant('Utilisateur::PROFIL_ADMINISTRATEUR') ? 'Favoris' : 'Mes favoris' }}</a>
 					</li>
+					<li><hr></li>
+					<li>
+						<a href="admin?entite=utilisateur">{{ oUtilConn.utilisateur_profil == constant('Utilisateur::PROFIL_ADMINISTRATEUR') ? 'Utilisateurs' : 'Mon compte' }}</a>
+					</li>
 					{% if oUtilConn.utilisateur_profil == constant('Utilisateur::PROFIL_ADMINISTRATEUR') %}
-						<li>
-							<hr>
-							<a href="admin?entite=utilisateur">Utilisateurs</a>
-						</li>
 						<li>
 							<a href="admin?entite=pays">Pays</a>
 						</li>
 					{% endif %}
+					<li>
+						<a href="admin?entite=utilisateur&action=d">Déconnecter</a>
+					</li>
 				</ul>
 			</aside>
 			<main>
@@ -136,9 +138,9 @@
 				<div class="footer-main-content">
 					<h3>À propos</h3>
 					<p class="no-padding-bottom">Lord Stampee vient d’une famille de passionnés de philatélie depuis des
-																																																																																																																																																																																																																																																																																																																														                    générations. Sa passion pour
-																																																																																																																																																																																																																																																																																																																														                    les timbres rares et précieux l'a amené à rassembler l'une des collections les plus impressionnantes
-																																																																																																																																																																																																																																																																																																																														                    du monde.</p>
+																																																																																																																																																																																																																																																																																																																																																																																																																																																						                    générations. Sa passion pour
+																																																																																																																																																																																																																																																																																																																																																																																																																																																						                    les timbres rares et précieux l'a amené à rassembler l'une des collections les plus impressionnantes
+																																																																																																																																																																																																																																																																																																																																																																																																																																																						                    du monde.</p>
 					<a href="#">En savoir plus</a>
 				</div>
 				<div class="footer-main-content">
