--- a/app/vues/templates/frontend/modaleConnexion.twig
+++ b/app/vues/templates/frontend/modaleConnexion.twig
@@ -1,19 +1,19 @@
 <dialog id="modaleConnexion">
-  <section>
-    <h1>Connexion</h1>
-    
-    <form name="frmConnexion" method="POST">
+	<section>
+		<h1>Connexion</h1>
 
-      <br><span id="messageErreurConnexion">&nbsp;</span>
+		<form name="frmConnexion" method="POST">
 
-      <label>Courriel</label>
-      <input name="utilisateur_courriel" value="">
+			<span id="messageErreurConnexion"></span>
 
-      <label>Mot de passe</label>
-      <input type="password" name="utilisateur_mdp" value="">
-    
-      <input type="submit" value="Envoyer">
+			<label>Courriel</label>
+			<input name="utilisateur_courriel" value="">
 
-    </form>
-  </section>
+			<label>Mot de passe</label>
+			<input type="password" name="utilisateur_mdp" value="">
+
+			<input type="submit" value="Envoyer">
+
+		</form>
+	</section>
 </dialog>
