--- a/app/vues/templates/frontend/vCatalogue.twig
+++ b/app/vues/templates/frontend/vCatalogue.twig
@@ -1,3 +1,4 @@
+<script src="assets/js/gridList.js" defer></script>
 <div
 	class="container-catalogue">
 	<!-- barre des filtres -->
@@ -159,7 +160,7 @@
 					<!-- image -->
 					<a href="enchere?enchere_id={{ enchere.enchere_id }}">
 						<picture>
-							<img src={{ enchere.image_nom_fichier }} alt={{ enchere.timbre_titre }}>
+							<img src={{ enchere.image_nom_fichier }} alt="{{ enchere.timbre_titre }}">
 						</picture>
 					</a>
 					<div>
